--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,12 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="prototipegs1.gestorsm.gs1.diuplasticos">
+
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -7,5 +14,30 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" />
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/title_activity_login" />
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".Register" />
+        <activity android:name=".Map" />
+        <activity android:name=".ViewPhoto" />
+        <activity android:name=".NewPhoto" />
+        <activity android:name=".CompleteUpload" />
+        <activity android:name=".ForgotPass" />
+        <activity android:name=".MapClock" />
+        <activity android:name=".DownloadData" />
+        <activity android:name=".DownloadConfirmed" />
+        <activity android:name=".Map2" />
+        <activity android:name=".SelectSourceImage" />
+        <activity android:name=".NewPhoto2" />
+        <activity android:name=".NewPhoto3"></activity>
+    </application>
+
 </manifest>
